# lark

./: setup.cfg
lark/parsers/: lalr_parser.py
