[global]
zip_safe=

[bdist_wheel]
universal = 1

[metadata]
description-file = README.md
license_file = LICENSE

[flake8]
ignore = E501, # line too long
         E301,E302,E303,E305,E306,W391, # blank lines
         W503,W504, # line breaks
         E201,E202,E203,E211,E225,E226,E228,E231,E241,E271, # whitespace before/after/etc
         E124,E127,E128,E129, # indents
         E261,E265,E266, # comments
         E701, # multiple statements on one line
         E741, # ambigous variable
         E722, # bare except
         E402, # module-level import not at the top
